# Wintap-PyUtil

./: .env-default  .gitignore  AWS_S3.md  Datasets.md  ETL.md  ETL_Flow.md  Lol-checking.sql  MITRECARAnalytics.ipynb  Makefile  Pipfile  ProcessTrees.ipynb  QuackStart.ipynb  QuickStart.ipynb  README.md  RawToStdView.sql  collectbinaries.py  example_wintappy_settings.toml  initdb.sql  merge_binary_collects.py  notebookutil.py  pyproject.toml  rawtorolling.py  rawtostdview.py  rawutil.py  requirements.txt  setup.cfg  setup.py  stdview_duckdb.py  stdviewutil.py
.github/workflows/: main.yml
AWS/: download_from_s3.py
analytics/: pyproject.toml  query_analytic.py  utils.py
analytics/mitre_car/: CAR-2013-02-003.sql  CAR-2014-11-006.sql  CAR-2016-03-002.sql  CAR-2019-07-002.sql  CAR-2020-09-004.sql  CAR-2020-09-005.sql  car_2013_02_003.sql  car_2013_03_001.sql  car_2013_05_004.sql  car_2013_07_002.sql  car_2014_05_002.sql  car_2014_11_004.sql  car_2014_11_008.sql  constants.py
analytics/tests/: test_sql_utils.py  test_utils.py
analytics/utils/: sql_utils.py
bincfg/: README.md  setup.cfg
bincfg/docs/html/: .buildinfo  bincfg.html  bincfg.labeling.html  bincfg.normalization.html  bincfg.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  searchindex.js
bincfg/docs/html/_modules/: index.html
bincfg/docs/html/_modules/bincfg/cfg/: cfg.html  cfg_basic_block.html  cfg_dataset.html  cfg_parsers.html  mem_cfg_dataset.html
bincfg/docs/html/_modules/bincfg/labeling/: node_labels.html
bincfg/docs/html/_modules/bincfg/normalization/: base_normalizer.html  base_tokenizer.html  builtin_normalizers.html  norm_utils.html  normalize.html  tokenization_constants.html
bincfg/docs/html/_modules/bincfg/utils/: cfg_utils.html  mp_utils.html
bincfg/docs/html/_sources/: bincfg.labeling.rst.txt  bincfg.normalization.rst.txt  bincfg.utils.rst.txt  index.rst.txt  modules.rst.txt
bincfg/src/bincfg/: __init__.py
bincfg/src/bincfg/cfg/: __init__.py  cfg.py  cfg_basic_block.py  cfg_dataset.py  cfg_edge.py  cfg_function.py  cfg_parsers.py  mem_cfg.py  mem_cfg_dataset.py
bincfg/src/bincfg/labeling/: __init__.py  node_labels.py
bincfg/src/bincfg/normalization/: __init__.py  base_normalizer.py  base_tokenizer.py  check_asm.py  norm_utils.py  normalize.py
bincfg/src/bincfg/utils/: __init__.py  cfg_utils.py  misc_utils.py  mp_utils.py
database/: constants.py  wintap_database.py  wintap_duckdb.py
database/tests/: test_wintap_duckdb.py
tests/: test_analytics_utils.py  test_config.py  test_wintap_duckdb.py
tests/analytics/: test_query_analytic.py  test_utils.py
tests/database/: test_wintap_duckdb.py
tests/etlutils/: test_utils.py
tests/fixtures/: my-test-id.sql
wintap/bincfg/: requirements_dev.txt  setup.py
wintap/datautils/: RawToStdView.sql.bak  initdb.sql  rawutil.py  stdview_duckdb.py  stdviewutil.py
wintap/etlutils/: collectbinaries.py  download_from_s3.py  rawtorolling.py  rawtostdview.py
wintap/examples/: QuackStart.ipynb
wintap/notebookutils/: datasetchooser.py
wintap/scripts/: collectbinaries.py  rawtorolling.py  rawtostdview.py
wintappy/: config.py
wintappy/analytics/: constants.py  query_analytic.py  utils.py
wintappy/analytics/mitre_car/: CAR-2013-02-003.sql  CAR-2013-03-001.sql  CAR-2013-05-004.sql  CAR-2013-07-002.sql  CAR-2014-03-006.sql  CAR-2014-04-003.sql  CAR-2014-05-002.sql  CAR-2014-11-004.sql  CAR-2014-11-006.sql  CAR-2014-11-008.sql  CAR-2016-03-002.sql  CAR-2019-04-002.sql  CAR-2019-04-003.sql  CAR-2019-07-002.sql  (+29 more)
wintappy/database/: constants.py  wintap_database.py  wintap_duckdb.py
wintappy/datautils/: initdb.sql  label_summary.sql  lolbas_summary.sql  mitre_summary.sql  process_path.sql  process_summary.sql  rawtostdview.sql  rawutil.py  sigma_summary.sql  stdview_duckdb.py  stdviewutil.py  summary_util.py  uber_summary.sql  wintapgraph.py
wintappy/etlutils/: collectbinaries.py  dbhelpers.py  download_from_s3.py  downloadfroms3.py  label_summary.py  rawtorolling.py  rawtostdview.py  run_enrichment.py  runone.py  sigma_summary.py  transformer_manager.py  uber_summary.py  ubersummary.py  utils.py
wintappy/examples/: ProcessMerged.ipynb  QuackStart.ipynb
wintappy/notebookutils/: __init__.py  datasetchooser.py
wintappy/schema/: README.md  create_empty_parquet.sh
wintappy/sleeper/: README.md  add_required.py  create-sleeper-no-nulls.sh  ingest-request.py  process-sleeper.json
(+31 files in other folders)
