[metadata]
name = wintappy
version = attr: wintappy.VERSION
author = "LLNL"
author_email = "grantj@llnl.gov"
description = "Python utilities for working with Wintap data"
license = "MIT License"

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude = 
    examples*
    scripts*

[options.package_data]
datautils = 
    *.sql

[options.entry_points]
console_scripts = 
    collectbinaries = wintappy.etlutils.collectbinaries:main
    download_from_s3 = wintappy.etlutils.download_from_s3:main
    rawtorolling = wintappy.etlutils.rawtorolling:main
    rawtostdview = wintappy.etlutils.rawtostdview:main

[black]
line-length = 100
target-version = ["py310"]
disallow-untyped-defs = true
ignore-missing-imports = true
warn-unused-imports = true

[isort]
profile = black

[mypy]
ignore_missing_imports = true
python_version = 3.10
pretty = true

[mypy-analytics.*]
disallow_untyped_defs = True

[mypy-database.*]
disallow_untyped_defs = True

[tool:pytest]
pythonpath = wintappy

[sqlfluff]
dialect = duckdb
sql_file_exts = .sql
max_line_length = 100
ignore = templating
# the macro interpretation causes this rule to fail
exclude_rules=L009
