[metadata]
name = wintappy
version = attr: wintappy.VERSION
author = LLNL
author_email = grantj@llnl.gov
description = Python utilities for working with Wintap data
long_description=file: README.md
long_description_content_type=text/markdown

license = MIT License
url = https://github.com/LLNL/Wintap-PyUtil

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude = 
    examples*
    scripts*

[options.package_data]
wintappy.datautils = *.sql

[options.entry_points]
console_scripts = 
    collectbinaries = wintappy.etlutils.collectbinaries:main
    download_from_s3 = wintappy.etlutils.download_from_s3:main
    rawtorolling = wintappy.etlutils.rawtorolling:main
    rawtostdview = wintappy.etlutils.rawtostdview:main

[black]
line-length = 100
target-version = ["py310"]
disallow-untyped-defs = true
ignore-missing-imports = true
warn-unused-imports = true

[isort]
profile = black

[mypy]
ignore_missing_imports = true
python_version = 3.10
pretty = true
