[metadata]
name = wintappy
version = attr: wintappy.VERSION
author = LLNL
author_email = grantj@llnl.gov
description = Python utilities for working with Wintap data
long_description=file: README.md
long_description_content_type=text/markdown
license = MIT License
url = https://github.com/LLNL/Wintap-PyUtil

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude = 
    examples*
    scripts*
    tests*

[options.package_data]
* = *.sql

[options.entry_points]
console_scripts = 
    collectbinaries = wintappy.etlutils.collectbinaries:main
    dbhelpers = wintappy.etlutils.dbhelpers:main
    download_from_s3 = wintappy.etlutils.download_from_s3:main
    run_enrichment = wintappy.etlutils.run_enrichment:main
    rawtorolling = wintappy.etlutils.rawtorolling:main
    rawtostdview = wintappy.etlutils.rawtostdview:main

[black]
line-length = 100
target-version = ["py310"]
disallow-untyped-defs = true
ignore-missing-imports = true
warn-unused-imports = true

[isort]
profile = black

[mypy]
ignore_missing_imports = true
python_version = 3.10
pretty = true

[tool:pytest]
pythonpath = wintappy

[sqlfluff]
dialect = duckdb
sql_file_exts = .sql
max_line_length = 100
ignore = templating
# the macro interpretation causes this rule to fail
exclude_rules=L009
